ADD pagination controller + bug fixes

--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -81,7 +81,7 @@
         <div class="block">
           <div>
             <textarea id="large-input" name="orderNote"
-              class="flex w-full dark:bg-secondary-300 dark:border-secondary-200 dark:focus:border-primary-100 items-center rounded px-4 py-3 text-sm text-heading transition duration-300 ease-in-out focus:outline-0 focus:ring-0 border border-border-base focus:border-accent"
+              class="flex w-full dark:text-white dark:bg-secondary-300 dark:border-secondary-200 dark:focus:border-primary-100 items-center rounded px-4 py-3 text-sm text-heading transition duration-300 ease-in-out focus:outline-0 focus:ring-0 border border-border-base focus:border-accent"
               autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
               rows="4">
             </textarea>
