--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -5,7 +5,7 @@
         <nav class="flex px-5 py-3 text-gray-700 border border-secondary-50 rounded-lg bg-secondary-50 dark:bg-secondary-100 dark:border-gray-800" aria-label="Breadcrumb">
             <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
             <li class="inline-flex items-center">
-                <button (click)="goTo('/search')" class="inline-flex items-center text-sm font-medium text-gray-500 dark:text-white hover:text-primary-100 dark:hover:text-primary-50">
+                <button (click)="back()" class="inline-flex items-center text-sm font-medium text-gray-500 dark:text-white hover:text-primary-100 dark:hover:text-primary-50">
                 <svg class="w-3 h-3 mr-2 text-gray-400 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 12 10">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M5 1 1 5l4 4m6-8L7 5l4 4"/>
                 </svg>
@@ -37,7 +37,7 @@
                 <!--</a>-->
             </div>
             <div class="pt-2 line-clamp-5 h-fit">
-                <markdown class="dark:text-gray-200" [data]="productOff?.description"></markdown>
+                <markdown class="dark:text-gray-200 text-wrap break-all" [data]="productOff?.description"></markdown>
             </div>            
             <div class="grid grid-cols-2 h-fit">
                 <div class="h-fit pt-2 dark:text-gray-300">V: {{productOff?.version || 'latest'}}</div>
@@ -155,7 +155,7 @@
 
             <div id="details-container">            
                 <h2 #detailsContent class="text-4xl font-extrabold text-primary-100 dark:text-primary-50 text-center pb-4">Description</h2>
-                <markdown class="dark:text-gray-200" [data]="prodSpec.description"></markdown>
+                <markdown class="dark:text-gray-200 text-wrap break-all" [data]="prodSpec.description"></markdown>
                 @if(serviceSpecs.length > 0){
                     <div class="pb-2">                
                         <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-50">{{ 'PRODUCT_DETAILS._service_spec' | translate }}:</h5>
@@ -238,7 +238,7 @@
                                     <div class="flex justify-start mb-2">
                                         <h2 class="text-gray-900 dark:text-white text-3xl font-extrabold mb-2">{{price.name}}</h2>
                                     </div>
-                                    <markdown class="dark:text-gray-200 w-full" [data]="price?.description"></markdown>
+                                    <markdown class="dark:text-gray-200 w-full text-wrap break-all" [data]="price?.description"></markdown>
                                 </div>
                             }
                         }
@@ -399,7 +399,7 @@
                                 </div>
                             </div>
                             <div id="terms-markdown" class="line-clamp-5">
-                                <markdown class="text-lg font-normal text-gray-700 dark:text-gray-200 mb-4" [data]="productOff?.productOfferingTerm?.at(0)?.description"></markdown>
+                                <markdown class="text-lg font-normal text-gray-700 dark:text-gray-200 mb-4 text-wrap break-all" [data]="productOff?.productOfferingTerm?.at(0)?.description"></markdown>
                             </div>
                             @if(productOff?.productOfferingTerm?.at(0)?.description){
                                 @if(showTermsMore==false){
