--- a/src/app/shared/badge/badge.component.html
+++ b/src/app/shared/badge/badge.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-secondary-50 bg-primary-100 dark:bg-secondary-50 dark:text-primary-100 mb-2">
+<a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-secondary-50 bg-primary-100 dark:bg-secondary-50 dark:text-primary-100 mb-2">
   <fa-icon [icon]="faCloud" class="text-primary-50 mr-2"></fa-icon>
   {{category.name}}
 </a>
