--- a/src/app/shared/cart-card/cart-card.component.html
+++ b/src/app/shared/cart-card/cart-card.component.html
@@ -60,7 +60,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                                 </div>
                                 <p class="flex justify-center font-normal text-gray-700"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
                                 <p class="flex justify-center font-normal text-gray-700">/{{price.recurringChargePeriodType}}</p>
-                                <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
+                                <p class="flex justify-center mb-2 font-normal text-gray-700 text-wrap break-all p-4">{{price.description}}</p>
                               </div>
 
                             </label>
@@ -77,7 +77,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                                   </div>
                                   <p class="flex justify-center font-normal text-gray-700"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
                                   <p class="flex justify-center font-normal text-gray-700">/{{price.unitOfMeasure?.units}}</p>
-                                  <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
+                                  <p class="flex justify-center mb-2 font-normal text-gray-700 text-wrap break-all p-4">{{price.description}}</p>
                               </div>
                             </label>
                           </div>
@@ -90,7 +90,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                                         <div class="flex justify-start mb-2">
                                             <h2 class="text-gray-900 text-3xl font-extrabold mb-2">{{price.name}}</h2>
                                         </div>
-                                        <markdown class="w-full" [data]="price?.description"></markdown>
+                                        <markdown class="w-full text-wrap break-all p-4" [data]="price?.description"></markdown>
                                     </div>
                                 </label>
                             </div>
@@ -104,7 +104,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                                     <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{price.name}}</h5>
                                 </div>
                                 <p class="flex justify-center font-normal text-gray-700"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
-                                <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
+                                <p class="flex justify-center mb-2 font-normal text-gray-700 text-wrap break-all p-4">{{price.description}}</p>
                             </div>
                           </label>
                         </div>
