--- a/src/app/pages/seller-offerings/offerings/seller-service-spec/seller-service-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-service-spec/seller-service-spec.component.html
@@ -47,7 +47,7 @@
             
             <div id="dropdown" class="z-20 hidden w-fit md:w-1/5 p-3 bg-white rounded-lg shadow dark:bg-secondary-200">
             <h6 class="mb-3 text-sm font-medium text-gray-900 dark:text-white">
-                {{ 'OFFERINGS._state' | translate }}
+                {{ 'OFFERINGS._status' | translate }}
             </h6>
             <ul class="space-y-2 text-sm" aria-labelledby="dropdownDefault">
   
