--- a/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
@@ -9,7 +9,8 @@
 } @else {
     <!-- FILTERS -->
     <div class="flex items-end justify-end p-4 z-20">
-        <select id="dateRange" (change)="filterOrdersByDate()" [formControl]="dateRange" class="mr-4 text-sm text-gray-500 bg-transparent border-0 border-b-2 border-gray-200 appearance-none dark:text-gray-400 dark:border-gray-700 focus:outline-none focus:ring-0 focus:border-gray-200 peer">
+        <select id="dateRange" (change)="filterOrdersByDate()" [formControl]="dateRange"
+        class="mr-4 text-sm text-gray-500 bg-transparent border-0 border-b-2 border-gray-200 appearance-none dark:text-gray-400 dark:border-gray-700 focus:outline-none focus:ring-0 focus:border-gray-200 peer">
             <option selected value="month">This month</option>
             <option value="months">Last 3 months</option>
             <option value="year">Last year</option>
