--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
@@ -626,11 +626,19 @@
                                                 {{prod.description}}                                       
                                             </td>
                                             <td class="px-6 py-4 text-wrap break-all">
-                                                @for (char of prod.productSpecCharacteristicValue; track char;) {
+                                                @for (char of prod.productSpecCharacteristicValue; track char; let last = $last) {
                                                     @if(char.value){
-                                                        {{char.value}} {{char?.unitOfMeasure}},
+                                                        @if(!last){
+                                                            {{char.value}} {{char?.unitOfMeasure}},
+                                                        } @else {
+                                                            {{char.value}} {{char?.unitOfMeasure}}
+                                                        }                                                    
                                                     } @else {
-                                                        {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}},
+                                                        @if(!last){
+                                                            {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}},
+                                                        } @else {
+                                                            {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}}
+                                                        }
                                                     }                                                
                                                 }                                   
                                             </td>
@@ -1468,11 +1476,19 @@
                                                     {{prod.description}}                                       
                                                 </td>
                                                 <td class="px-6 py-4 text-wrap break-all">
-                                                    @for (char of prod.productSpecCharacteristicValue; track char;) {
+                                                    @for (char of prod.productSpecCharacteristicValue; track char; let last = $last) {
                                                         @if(char.value){
-                                                            {{char.value}} {{char?.unitOfMeasure}},
+                                                            @if(!last){
+                                                                {{char.value}} {{char?.unitOfMeasure}},
+                                                            } @else {
+                                                                {{char.value}} {{char?.unitOfMeasure}}
+                                                            }                                                    
                                                         } @else {
-                                                            {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}},
+                                                            @if(!last){
+                                                                {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}},
+                                                            } @else {
+                                                                {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}}
+                                                            }
                                                         }                                                
                                                     }                                   
                                                 </td>
