--- a/src/app/pages/seller-offerings/offerings/seller-resource-spec/create-resource-spec/create-resource-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-resource-spec/create-resource-spec/create-resource-spec.component.html
@@ -221,12 +221,20 @@
                                             {{prod.description}}                                       
                                         </td>
                                         <td class="px-6 py-4 text-wrap break-all">
-                                            @for (char of prod.resourceSpecCharacteristicValue; track char;) {
+                                            @for (char of prod.resourceSpecCharacteristicValue; track char; let last = $last) {
                                                 @if(char.value){
-                                                    {{char.value}} {{char?.unitOfMeasure}},
+                                                    @if(!last){
+                                                        {{char.value}} {{char?.unitOfMeasure}},
+                                                    } @else {
+                                                        {{char.value}} {{char?.unitOfMeasure}}
+                                                    }                                                    
                                                 } @else {
-                                                    {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}},
-                                                }                                                
+                                                    @if(!last){
+                                                        {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}},
+                                                    } @else {
+                                                        {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}}
+                                                    }
+                                                }                                               
                                             }                                   
                                         </td>
                                         <td class="px-6 py-4">
@@ -451,12 +459,20 @@
                                                 {{prod.description}}                                       
                                             </td>
                                             <td class="px-6 py-4 text-wrap break-all">
-                                                @for (char of prod.resourceSpecCharacteristicValue; track char;) {
+                                                @for (char of prod.resourceSpecCharacteristicValue; track char; let last=$last) {
                                                     @if(char.value){
-                                                        {{char.value}} {{char?.unitOfMeasure}},
+                                                        @if(!last){
+                                                            {{char.value}} {{char?.unitOfMeasure}},
+                                                        } @else {
+                                                            {{char.value}} {{char?.unitOfMeasure}}
+                                                        }                                                    
                                                     } @else {
-                                                        {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}},
-                                                    }                                                
+                                                        @if(!last){
+                                                            {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}},
+                                                        } @else {
+                                                            {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}}
+                                                        }
+                                                    }                                                 
                                                 }                                   
                                             </td>
                                         </tr>
